Bug 12952 - Samba DNS server does not honour wildcards
Summary: Samba DNS server does not honour wildcards
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DNS server (internal) (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 10435 (view as bug list)
Depends on: 12994
Blocks:
  Show dependency treegraph
 
Reported: 2017-08-09 03:52 UTC by Andrew Bartlett
Modified: 2017-11-01 08:41 UTC (History)
4 users (show)

See Also:


Attachments
patch for master (37.44 KB, patch)
2017-08-09 03:52 UTC, Andrew Bartlett
no flags Details
Patch for 4.7.1 (44.74 KB, patch)
2017-10-19 00:59 UTC, Garming Sam
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2017-08-09 03:52:46 UTC
Created attachment 13453 [details]
patch for master

The internal DNS server does not honour wildcard records.
Comment 1 Björn Jacke 2017-08-24 16:02:46 UTC
*** Bug 10435 has been marked as a duplicate of this bug. ***
Comment 2 Garming Sam 2017-10-19 00:59:12 UTC
Created attachment 13706 [details]
Patch for 4.7.1

Patch for 4.7.1. Includes the patches for https://bugzilla.samba.org/show_bug.cgi?id=12994 which should be together with these changes.
Comment 3 Andrew Bartlett 2017-10-19 01:35:42 UTC
Comment on attachment 13706 [details]
Patch for 4.7.1

Thanks.  It is really good to get this issue fixed, it looks like it has bothered folks for a while (first raised in 2014).
Comment 4 Andrew Bartlett 2017-10-19 01:39:48 UTC
Please pick for 4.7.next
Comment 5 Karolin Seeger 2017-10-24 08:05:08 UTC
(In reply to Andrew Bartlett from comment #4)
Pushed to autobuild-v4-7-test.
Comment 6 Karolin Seeger 2017-11-01 08:38:56 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to v4-7-test.
Closing out bug report.

Thanks!
Comment 7 Chris Alavoine 2017-11-01 08:41:35 UTC
Thanks to all involved for getting this one fixed.

c:)